# NLP_A1

./: .gitignore  README.md  a1.ipynb  pyproject.toml  requirements.txt  wordsim353.csv
app/: main.py
app/templates/: index.html
artifacts/: idx2word.pkl  word2idx.pkl
